--- a/SpringCourse/pom.xml
+++ b/SpringCourse/pom.xml
@@ -13,5 +13,15 @@
 			<artifactId>spring-context</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
+	    <dependency>
+	      <groupId>org.springframework</groupId>
+	      <artifactId>spring-core</artifactId>
+	      <version>${org.springframework.version}</version>
+	    </dependency>
+		<dependency>
+		  <groupId>javax.annotation</groupId>
+		  <artifactId>javax.annotation-api</artifactId>
+		  <version>1.3.2</version>
+		</dependency>
 	</dependencies>
 </project>
